# ipr

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  STYLE.md  aclocal.m4  configure  configure.ac  ipr.2003.vcproj  ipr.2005.vcproj  ipr.2008.vcproj
.github/workflows/: analysis.yml  clang-libcpp.yml  clang-libstdcpp.yml  clang-macos.yml  docs.yaml  gcc.yml  mac.yml  main.yml  msvc.yml
cmake/: External_GTest.cmake
doc/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  ipr.bib  macro.tex  ref.tex  user-guide.tex
include/: ChangeLog  Makefile.am  Makefile.in  impl.hxx  interface.hxx  io.hxx  lexer.hxx  node-category.def  traversal.hxx  utility.hxx
include/ipr/: ancillary  attribute  cxx-form  impl  input  interface  io  lexer  location  node-category  std-preamble  synopsis  traversal  utility  utility-impl
infra/: Analysis.ruleset
m4/: ipr.m4
src/: ChangeLog  Makefile.am  Makefile.in  builtin.def  cxx-ipr-impl.ixx  cxx-ipr-io.cxx  cxx-ipr-io.ixx  cxx-ipr-syntax.ixx  cxx-ipr-traversal.cxx  cxx-ipr-traversal.ixx  cxx-ipr-vocabulary.ixx  cxx-ipr.cxx  cxx-ipr.ixx  impl.cxx  input.cxx  interface.cxx  io.cxx  traversal.cxx  utility.cxx
tests/: CMakeLists.txt  main.cpp  simple.cpp
tests/unit-tests/: CMakeLists.txt  conversions.cpp  conversions.cxx  lines.cxx  main.cpp  phased-eval.cxx  region-owner.cxx  simple.cpp  simple.cxx  specifiers.cxx  warehouse.cxx  words.cxx
